@@ -1,11 +1,15 @@
 package com.any.mikuplushie.util;
 
+import com.any.mikuplushie.registry.ModBlocks;
 import com.any.mikuplushie.registry.ModSoundEvents;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.item.Item;
+import net.minecraft.sound.SoundCategory;
 import net.minecraft.sound.SoundEvent;
+import net.minecraft.sound.SoundEvents;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.Position;
 import net.minecraft.world.World;
 
 public class ModUtil {
@@ -47,6 +51,14 @@ public class ModUtil {
             }
         }
 
-        return ModSoundEvents.MIKU_PLUSHIES_SOUND_EVENTS.get(0);
+        return ModSoundEvents.MIKU_PLUSHIES_SOUND_EVENTS.getFirst();
+    }
+
+    public static void playPlushSound(World world, BlockPos position, String plushName, String action){
+        if (!plushName.equals(ModUtil.getBlockIdFromBlock(ModBlocks.KONOHA_PLUSH))){
+            SoundEvent soundEvent = getPlushSoundEvent(plushName, action);
+            world.playSound(position.getX(), position.getY(), position.getZ(),
+                soundEvent, SoundCategory.BLOCKS, 0.5F, 1, true);
+        }
     }
 }
